# nix-jetbrains-plugin-repository

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: update-data.yml
data/: index.json
data/00/0e/bb3d905effdc9cde9a52b841ad659ac2779b4ecb02b693a9505c3db3c968/: metadata.json
data/00/16/1e7bdcf19cab3159e0be78b0b0b5b1917f4341db34b60be621c64bc7af8b/: metadata.json
data/00/1e/c24342020926ed348bfe96706a71d1168b8a043ec0462b483cbde1f05626/: metadata.json
data/00/26/4246f78a70a475c04506ea5e6327734a6908defff3af7e2cf316cc7cb141/: metadata.json
data/00/2c/3ad82b9a8be14a485eb32f0d104624e2c1d376bbf4287be2bf021ce6cf5f/: metadata.json
data/00/2c/be8d73a941b6672fba7c8c40b9a008c5e5c920698e7da3f940bd39925498/: metadata.json
data/00/2f/8faf1dd16ec4957f32480b0cd56c0514d7224f37d90e89fa3abf3b7bab26/: metadata.json
data/00/31/73c4ae917ef9e9bcb5cbb532a40695cf6700265e177be380ff1b04caf1b6/: metadata.json
data/00/35/21a1e8ad4f49cca2a7b1d30d6b320d94f722f2f71087f2b110e15659f0c1/: metadata.json
data/00/36/94fb1db09fdb08aadf5968bf738764e15b8cda09406628be19cdbd28c9a0/: metadata.json
data/00/40/efd47b79675de66c4742460159bde0f600ffa95e6543f4d6e0464cf63ff4/: metadata.json
data/00/43/3efbdd7d2a23a6fd4a05370f6cdc73257d18970ce3f82b426f8cdcf4991b/: metadata.json
jb-repo-indexer/: Cargo.toml  package.nix
jb-repo-indexer/src/: args.rs  error.rs  main.rs  statistics.rs
jb-repo-indexer/src/api/: mod.rs  models.rs
jb-repo-indexer/src/db/: mod.rs  models.rs
jb-repo-indexer/src/meta/: mod.rs  output.rs  sync.rs
nix/lib/: default.nix  packaging.nix
(+11926 files in other folders)
